Avances de sesion de usuario

--- a/Cinema.UI/Locale/localization-es.json
+++ b/Cinema.UI/Locale/localization-es.json
@@ -1,1 +1,56 @@
-{"button_accept":"Aceptar","button_cancel":"Cancelar","button_next":"Siguiente","button_back":"Atras","button_export":"Exportar","button_enter":"Ingresar","text_welcome":"Bienvenido a Harpoon","text_logintittle":"Entrar","text_user":"Correo o nombre de usuario:","text_pass":"Contraseña:","text_registered":"¿No estas registrado?","text_createacc":"Crear una cuenta.","text_registertittle":"Archon - Registro de cliente","text_name":"Nombre:","text_lastname":"*Apellido:","text_document":"DNI: ","text_cuitcuil":"Cuit/Cuil:","text_birthday":"Nacimiento:","text_confirmpass":"Confirmar contraseña:","text_register":"Registrarse","text_username":"Nombre de usuario:","text_mail":"Direccion de correo electronico:","integrity_check_genericerror":"Se encontró un error al intentar ejecutar la evaluacion de integridad.\n Mensaje de error: ","integrity_check_failed":"Se encontraron problemas en la evaluacion de integridad de los datos. Revise las bitacoras para mas informacion.","text_integrity":"Integridad","client_text":"Cliente","client_text_search":"Buscar","client_text_myrequest":"Mis solicitudes","client_text_myprofile":"Mi perfil","announcer_text_profile":"Mi perfil","announcer_text_myprograms":"Mis programas","text_mainformtittle":"Harpoon - Software de compra-venta de publicidad","text_preview":"Vista previa/Edicion","admin_panel_text":"Panel de administrador","settings_group_text":"Opciones","language_settings_text":"Idioma","adminpub_text_adrequests":"Solicitudes de publicidad","announcer_text":"Anunciante","adminpub_text_myprofile":"Mi perfil","announcer_text_adrequests":"Solicitudes de publicidad","announcer_text_myadmins":"Mis administradores","text_featured":"Inicio","adminpub_text":"Administrador de publicidad","settings_text_item":"Ajustes","text_new":"Nuevo","text_update":"Actualizar","text_myprograms":"Mis programas","text_contenttype":"Tipo de contenido:","text_targetgroup":"Publico objetivo:","program_starttime":"Inicio:","program_endtime":"Fin:","program_minuteprice":"Precio por minuto:","text_description":"Descripcion:","text_image_upload":"Cargar"}
+{
+  "button_accept": "Aceptar",
+  "button_cancel": "Cancelar",
+  "button_next": "Siguiente",
+  "button_back": "Atras",
+  "button_export": "Exportar",
+  "button_enter": "Ingresar",
+  "text_welcome": "Bienvenido a Harpoon",
+  "text_logintittle": "Entrar",
+  "text_user": "Correo o nombre de usuario:",
+  "text_pass": "Contraseña:",
+  "text_registered": "¿No estas registrado?",
+  "text_createacc": "Crear una cuenta.",
+  "text_registertittle": "Archon - Registro de cliente",
+  "text_name": "Nombre:",
+  "text_lastname": "*Apellido:",
+  "text_document": "DNI: ",
+  "text_cuitcuil": "Cuit/Cuil:",
+  "text_birthday": "Nacimiento:",
+  "text_confirmpass": "Confirmar contraseña:",
+  "text_register": "Registrarse",
+  "text_username": "Nombre de usuario:",
+  "text_mail": "Direccion de correo electronico:",
+  "integrity_check_genericerror": "Se encontró un error al intentar ejecutar la evaluacion de integridad.\n Mensaje de error: ",
+  "integrity_check_failed": "Se encontraron problemas en la evaluacion de integridad de los datos. Revise las bitacoras para mas informacion.",
+  "text_integrity": "Integridad",
+  "client_text": "Cliente",
+  "client_text_search": "Buscar",
+  "client_text_myrequest": "Mis solicitudes",
+  "client_text_myprofile": "Mi perfil",
+  "announcer_text_profile": "Mi perfil",
+  "announcer_text_myprograms": "Mis programas",
+  "text_mainformtittle": "Harpoon - Software de compra-venta de publicidad",
+  "text_preview": "Vista previa/Edicion",
+  "admin_panel_text": "Panel de administrador",
+  "settings_group_text": "Opciones",
+  "language_settings_text": "Idioma",
+  "adminpub_text_adrequests": "Solicitudes de publicidad",
+  "announcer_text": "Anunciante",
+  "adminpub_text_myprofile": "Mi perfil",
+  "announcer_text_adrequests": "Solicitudes de publicidad",
+  "announcer_text_myadmins": "Mis administradores",
+  "text_featured": "Inicio",
+  "adminpub_text": "Administrador de publicidad",
+  "settings_text_item": "Ajustes",
+  "text_new": "Nuevo",
+  "text_update": "Actualizar",
+  "text_myprograms": "Mis programas",
+  "text_contenttype": "Tipo de contenido:",
+  "text_targetgroup": "Publico objetivo:",
+  "program_starttime": "Inicio:",
+  "program_endtime": "Fin:",
+  "program_minuteprice": "Precio por minuto:",
+  "text_description": "Descripcion:",
+  "text_image_upload": "Cargar"
+}
