--- a/Cinema.UI/Locale/localization-en.json
+++ b/Cinema.UI/Locale/localization-en.json
@@ -77,5 +77,9 @@
   "text_friday": "Friday",
   "text_saturday": "Saturday",
   "text_sunday": "Sunday",
-  "text_contenttype": "Content type:"
+  "text_contenttype": "Content type:",
+  "text_id": "Id",
+  "text_moviename": "Movie name",
+  "text_seat" : "Seat"
+
 }
